# RayTracing

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: AABB.h  BoundingVolumeHierarchy.h  Camera.h  Definitions.h  HitRecord.h  Material.h  MaterialData.h  Random.h  Ray.h  Rectangle.h  Scene.h  Sphere.h  Vec3.h
